...
                        UIApplication.shared.open(url)
                    }
                #endif
            } label: {
                Label(Strings.Settings.manageHealthAccessTitle, systemImage: "heart.text.square")
            }
            .accessibilityIdentifier("manage-health-access-link")
        }
    }

    // MARK: - History Section

    private var historySection: some View {
...
            }
            Button(role: .destructive) {
                self.showingClearConfirmation = true
            } label: {
                Label(Strings.Settings.clearAllDataTitle, systemImage: "trash")
            }
            .accessibilityIdentifier("clear-all-data-button")
        }
    }

    // MARK: - Support & Legal Section

    private var supportSection: some View {
...
